kubernetes/apps/ai/litellm/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: litellm-internal
  namespace: ai
spec:
  parentRefs:
    - name: internal
      namespace: gateway-system
      sectionName: http
    - name: internal
      namespace: gateway-system
      sectionName: https
  hostnames:
    - litellm.local.cisien.com
  rules:
    - backendRefs:
        - name: litellm
          port: 4000
